refactor: update RabbitMQ job scheduling and configuration
- Change job scheduling frequency from every minute to every five seconds.
- Modify SendMessageToQueue job to accept a message parameter and log the message instead of sending it directly to RabbitMQ.
- Add RabbitMQ connection details to deployment configuration.
- Update docker-compose to ensure RabbitMQ service is properly configured and accessible.
- Include RabbitMQ package in composer dependencies.

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -26,6 +26,11 @@ spec:
               value: user
             - name: DB_PASSWORD
               value: password
+            - name: RABBITMQ_HOST
+              value: rabbitmq  # Add this to connect to RabbitMQ service
+            - name: RABBITMQ_PORT
+              value: "5672"  # Set the correct RabbitMQ port
+
 ---
 apiVersion: v1
 kind: Service
